# advent-of-code

./: .gitignore  Cargo.toml
2024/day-1/: Cargo.toml
2024/day-1/src/: main.rs
2024/day-2/: Cargo.toml
2024/day-2/src/: main.rs
2024/day-3/: Cargo.toml
2024/day-3/src/: main.rs
2025/day-1/: Cargo.toml
2025/day-1/src/: main.rs
2025/day-10/: Cargo.toml
2025/day-10/src/: main.rs
2025/day-11/: Cargo.toml
2025/day-11/src/: main.rs
2025/day-12/: Cargo.toml
2025/day-12/src/: main.rs
2025/day-2/: Cargo.toml
2025/day-2/src/: main.rs
2025/day-3/: Cargo.toml
2025/day-3/src/: main.rs
2025/day-4/: Cargo.toml
2025/day-4/src/: main.rs
2025/day-5/: Cargo.toml
2025/day-5/src/: main.rs
2025/day-6/: Cargo.toml
2025/day-6/src/: main.rs
2025/day-7/: Cargo.toml
2025/day-7/src/: main.rs
2025/day-8/: Cargo.toml
2025/day-8/src/: main.rs
2025/day-9/: Cargo.toml
2025/day-9/src/: main.rs
aoc/: Cargo.toml
aoc-lib/: Cargo.toml
aoc-lib/src/: lib.rs  runner.rs  timer.rs
aoc/src/: main.rs
scripts/: main.py  pyproject.toml  template.rs
